--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "build":"lein with-profile publish cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/",
       "buildnative":"lein with-profile rnprod cljsbuild once && cp -rT npmfilesnative public/javascript/react-native-prod",
-      "builddev":"lein cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/"
+      "builddev":"lein cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/",
+      "buildprod":"lein run -m shadow.cljs.devtools.cli release scriptprod",
+      "buildbrowserprod":"lein run -m shadow.cljs.devtools.cli release browserprod",
+      "buildbrowser":"lein run -m shadow.cljs.devtools.cli compile browser"
+      
   },
   "repository": {
     "type": "git",
@@ -19,14 +23,5 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/miloradovic/maximoplus#readme",
-  "dependencies": {
-    "@skatejs/web-components": "^1.0.0",
-    "skatejs": "^4.6.7"
-  },
-  "devDependencies": {
-    "JSONStream": "^1.3.1",
-    "module-deps": "^4.1.1",
-    "shadow-cljs": "^2.3.20"
-  }
+  "homepage": "https://bitbucket.org/miloradovic/maximoplus#readme"
 }
