--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "builddev": "lein cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/",
     "buildprod": "lein run -m shadow.cljs.devtools.cli release scriptprod-lib",
     "buildbrowserprod": "lein run -m shadow.cljs.devtools.cli release browserprod",
-    "buildbrowser": "lein run -m shadow.cljs.devtools.cli compile browser"
+      "buildbrowser": "lein run -m shadow.cljs.devtools.cli compile browser",
+      "bundle":"rollup -c"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,10 @@
   "homepage": "https://bitbucket.org/miloradovic/maximoplus#readme",
   "dependencies": {
     "react-native-event-source": "^1.1.0"
+  },
+  "devDependencies": {
+    "rollup": "^1.16.6",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
