--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "maximoplus-core",
     "version": "2.2.1",
     "description": "",
-    "main": "rollup/index.js",
+    "main": "out/main.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "lein with-profile publish cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/",
