--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "lein with-profile publish cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/",
-        "buildnative": "lein with-profile rnprod cljsbuild once && cp -rT npmfilesnative public/javascript/react-native-prod",
-        "builddev": "lein cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/",
-        "buildprod": "lein run -m shadow.cljs.devtools.cli release scriptprod && rollup -c",
-        "buildbrowserprod": "lein run -m shadow.cljs.devtools.cli release browserprod",
-        "buildbrowser": "lein run -m shadow.cljs.devtools.cli compile browser",
-        "bundle": "rollup -c"
+        "buildnative": "rollup -c && lein with-profile rnprod cljsbuild once && cp -rT npmfilesnative public/javascript/react-native-prod",
+        "builddev": "lein cljsbuild once && cp -rT npmfiles public/javascript/maximoplus-core/"
     },
     "author": "",
     "license": "ISC",
